Update copyright year

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,6 @@ padding: 15px 0;
 {{ content }}
 
   <div class="row">
-    <div class="span12 footer">© 2013</div>
+    <div class="span12 footer">© 2013–2015 The Resummino Team.</div>
   </div>
 </div>
